# warp-dev-backup

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: release.yml
src/warp_dev_backup/: AppContext.py  Config.py  Logger.py  LoggerFactory.py  __init__.py  commands.py  main.py  storage.py  tmutil.py  treescan.py
tests/: conftest.py  test_Config.py  test_commands.py  test_conftest_fixtures.py  test_treescan.py
tests/test_data/: test.config.yml
